--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <title>Parth<3
     </title>
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-68YX3FTH8N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-68YX3FTH8N');
+</script>
+
 <body>
         <div class="image-container">
         <div class="image" style="--clip-start: ellipse(0 0 at 0 0); --clip-end: ellipse(150% 150% at 0 0);">
