--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <img src="img6.jpeg" />
             <img src="img6.jpeg" /></div>
         <div class="image" style="--clip-start: inset(0 0 100% 0); --clip-end: inset(0 0 0 0);">
-            <img src="img8.jpg" />
-            <img src="img8.jpg" /></div>
+            <img src="pic1.jpeg" />
+            <img src="pic1.jpeg" /></div>
         <div class="image" style="--clip-start: ellipse(0 0 at 100% 100%); --clip-end: ellipse(150% 150% at 100% 100%);">
             <img src="img9.jpeg" />
             <img src="img9.jpeg" /></div>
